# ptvmc-systematic-study

./: .gitignore  .pre-commit-config.yaml  README.md  index.md
ProductExpansions/: algorithms.py  example.py  utils.py
ProductExpansions/mathematica_scripts/: LPE.nb  PPE.nb  SLPE.nb
data/Fig2/: data_info.md  fidelity_snr.npz
data/Fig3/: cmc.npz  cv-smc.npz  data_info.md  smc.npz
data/Fig7/figure_datapoints/: cnn_10x10.npz  data_info.md  ipeps_10x10.npz  tvmc_10x10.npz  vit_10x10.npz
data/Fig7/states/: data_info.md
data/Fig7/states/cnn_states/: state_t=0.000000.nk  state_t=0.025000.nk  state_t=0.050000.nk  state_t=0.075000.nk  state_t=0.100000.nk  state_t=0.125000.nk  state_t=0.150000.nk  state_t=0.175000.nk  state_t=0.200000.nk  state_t=0.225000.nk  state_t=0.250000.nk  state_t=0.275000.nk  state_t=0.300000.nk  state_t=0.325000.nk  state_t=0.350000.nk  state_t=0.375000.nk  state_t=0.400000.nk  state_t=0.425000.nk  state_t=0.450000.nk  state_t=0.475000.nk  state_t=0.500000.nk  state_t=0.525000.nk  state_t=0.550000.nk  state_t=0.575000.nk  state_t=0.600000.nk  state_t=0.625000.nk  state_t=0.650000.nk  state_t=0.675000.nk  state_t=0.700000.nk  state_t=0.725000.nk  state_t=0.750000.nk  state_t=0.775000.nk  state_t=0.800000.nk  state_t=0.825000.nk  state_t=0.850000.nk  state_t=0.875000.nk  state_t=0.900000.nk  state_t=0.925000.nk  state_t=0.950000.nk  state_t=0.975000.nk  (+41 more)
data/Fig7/states/vit_states/: state_t=0.000000.nk  state_t=0.025000.nk  state_t=0.050000.nk  state_t=0.075000.nk  state_t=0.100000.nk  state_t=0.125000.nk  state_t=0.150000.nk  state_t=0.175000.nk  state_t=0.200000.nk  state_t=0.225000.nk  state_t=0.250000.nk  state_t=0.275000.nk  state_t=0.300000.nk  state_t=0.325000.nk  state_t=0.350000.nk  state_t=0.375000.nk  state_t=0.400000.nk  state_t=0.425000.nk  state_t=0.450000.nk  state_t=0.475000.nk  state_t=0.500000.nk  state_t=0.525000.nk  state_t=0.550000.nk  state_t=0.575000.nk  state_t=0.600000.nk  state_t=0.625000.nk  state_t=0.650000.nk  state_t=0.675000.nk  state_t=0.700000.nk  state_t=0.725000.nk  state_t=0.750000.nk  state_t=0.775000.nk  state_t=0.800000.nk  state_t=0.825000.nk  state_t=0.850000.nk  state_t=0.875000.nk  state_t=0.900000.nk  state_t=0.925000.nk  state_t=0.950000.nk  state_t=0.975000.nk  (+41 more)
docs/figures/ptvmc_driver_schematic/: ptvmc_driver.ai
examples/: tfim_dynamics_3x3.py
netket_ptvmc/: pyproject.toml
netket_ptvmc/examples/: .gitignore  state_compression.py  tfim_dynamics_3x3.py  tfim_dynamics_6x6.py
netket_ptvmc/examples/infidelity/: autodiagshift.py  infidelity_optimization.py
netket_ptvmc/examples/ptvmc/: .gitignore  example_1.py  example_2.py
